--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,83 @@
+/* Profit and loss graph css */
 .App {
+  font-family: Avenir, Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   text-align: center;
+  color: #2c3e50;
+  margin: 3rem auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.cards-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-around;
+  margin: 20px 0;
+  width: 100%;
+}
+
+.card {
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 16px;
+  width: 200px;
+  text-align: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.App-link {
-  color: #61dafb;
+.card h3 {
+  margin-bottom: 12px;
+  font-size: 1.5rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.card p {
+  margin: 0;
+}
+
+.options-form {
+  margin-bottom: 20px;
+}
+
+.options-form > div {
+  margin-bottom: 10px;
+}
+
+button {
+  border-color: #2c3e50;
+  padding: 5px 12px;
+  margin: 0 8px !important;
+  background-color: #2c3e50;
+  color: #fff;
+  border-radius: 3px !important;
+}
+
+input,
+select {
+  border-color: #2c3e50;
+  padding: 5px;
+  margin: 0 8px !important;
+  border-radius: 3px;
+}
+
+@media screen and (max-width: 767px) {
+  .card {
+    padding: 10px;
   }
-  to {
-    transform: rotate(360deg);
+  .card h3 {
+    margin-bottom: 5px;
+    font-size: 1rem;
+  }
+  .card p {
+    margin: 0;
+    font-size: 15px;
+  }
+  .option-row {
+    display: inline-grid;
+  }
+  input,
+  select {
+    padding: 3px;
+    font-size: 14px !important;
   }
 }
